// Vitest Snapshot v1

exports[`useAccount > mounts > is connected 1`] = `
{
  "data": {
    "address": "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
    "connector": "<MockConnector>",
  },
  "error": null,
  "errorUpdateCount": 0,
  "fetchStatus": "idle",
  "isError": false,
  "isFetched": true,
  "isFetching": false,
  "isLoading": false,
  "isRefetching": false,
  "isSuccess": true,
  "refetch": [Function],
  "status": "success",
  "suspense": [Function],
}
`;

exports[`useAccount > mounts > is not connected 1`] = `
{
  "data": null,
  "error": null,
  "errorUpdateCount": 0,
  "fetchStatus": "idle",
  "isError": false,
  "isFetched": true,
  "isFetching": false,
  "isLoading": false,
  "isRefetching": false,
  "isSuccess": true,
  "refetch": [Function],
  "status": "success",
  "suspense": [Function],
}
`;
